kubernetes-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-web-app-service
spec:
  selector:
    app: django-web-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
